src/components/ChatApp/ChatApp.css
/* ... */
.scroll::-webkit-scrollbar {
   display: none;
 }
.scroll {overflow: -moz-scrollbars-none;}

.voice-output{
  font-family: 'Lato', sans-serif;
  width: 500px;
  font-size: 100%;
  max-width: 400px;
  text-align: left;
  padding-right: 20px;
}

@media only screen and (min-width: 0px) and (max-width: 768px){
  textarea{
    width: 100%;
  }
  .textBack {
    width: 81%;
  }
  .Modal{
    padding: 25px 0px 25px 0px;
  }
  .voice-output{
    width: 100%;
    text-align: center;
    padding-right: 0px;
    margin: 0 auto;
  }
  .mic-container{
    margin:14px auto;
    text-align: center;
  }
  .voice-response{
  display: block;
  flex-wrap: row;
  position: relative;
  max-width: 300px;
  margin: 0 auto;
  text-align: center;
}
}
@media only screen and (min-width: 768px) and (max-width: 1024px){
  textarea{
    width: 100%;
  }
}
.leaflet-container {
  height: 150px;
  width: 100%;
  margin: 0 auto;
}

.chatapp {
  margin: 0 auto;
  width: 100vw;
  max-width: 700px;
  overflow-x: hidden;
  overflow-y: hidden;
  background: #eceff1;
  padding: 0;
  margin: 0 auto;
  margin-top: 56px;
  box-shadow: 0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(0,0,0,.23);
}

.map-marker-icon {
  background: url('../../images/map_marker_icon.png');
  background-size: contain;
  background-repeat: no-repeat;
  width: 25px;
  height: 25px;
}

.swipe-rss-websearch{
    width: 93%;
    margin: 0 auto;
}

.slick-slide{
  margin: 0 10px;
}

.slick-list{
  min-height: 130px;
  padding-top: 15px;
  padding-bottom: 15px;
}

.card{
  height: 225px;
  cursor: pointer;
  position: relative;
}

.card-noImg{
  height: 120px;
  cursor: pointer;
  position: relative;
}

.card-img{
  max-width: 100%;
  height: 120px;
}

.card-text{
  margin-top: -35px;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.card-url{
  color: #a9a9a9;
  position: absolute;
  bottom: 10px;
  right: 5px;
  width: 80%;
  text-align: right;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.message-text a {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
}

.dark a{
  color: #80a9a5;
}

.theme-button{
  line-height: 52px;
  background: #19324c;
  height: 56px;
  padding: 0 10px;
  color: #fff;
  font-size: 13px;
  cursor: pointer;
}

.dark .theme-button{
  line-height: 52px;
  background: #607d8b;
  height: 56px;
  padding: 0 10px;
  color:#fff;
}

.dialogStyle div{
    margin: 0 auto;
}
.headerStyle{
  font-family: 'Open Sans', sans-serif;
  margin: 15px 0;
  font-weight: 500;
}
em{
  background-color: orange;
}

.settingsComponents{
  width: 90%;
  text-align: center;
  margin: 0 auto;
}

.settingsForm{
  margin: 0 auto;
  margin-top: 48px;
  padding: 10px 0;
  max-width: 70%;
}

.settingsDialog {
  text-align: left;
  padding-left: 29%;
}

.settingsBtns {
  margin-bottom: 16px;
}

.settings-toggle {
  max-width: 60%;
}

.settingsHeader{
  font-family: 'Open Sans', sans-serif;
  margin-top: 15px;
  font-weight: 500;
  padding-left: 23%;
}

.settingsSubmit{
  margin: 0 auto;
  text-align: center;
  margin-left: -3%;
}

@media only screen and (min-width: 0px) and (max-width: 768px){
  .settingsForm {
    font-size: 14px;
    max-width: 100%;
  }
  .settingsForm h1{
    font-size: 18px;
  }
  .settingsForm h3{
    font-size: 16px;
  }
  .settingsForm h4{
    font-size: 14px;
  }
  .settingsDialog {
    text-align: left;
    padding-left: 10%;
    line-height: 80%;
  }
  .settingsBtns{
    margin-bottom: 16px;
    width: 85%;
  }
  .settings-toggle {
    max-width: 80%;
  }
  .settingsHeader{
    font-family: 'Open Sans', sans-serif;
    margin: 0 auto;
    padding-left: 30%;
    margin-top: 15px;
    font-weight: 500;
  }
  .settingsSubmit{
    margin: 0 auto;
    text-align: center;
  }
}

.serverUrl{
  float: left;
  position: relative;
  display: block;
  width: calc(100% - 46px);
  margin: -15px 0 10px -30px;
 }

.search{
  -webkit-text-fill-color: white;
  color: white;
  ;
}

.tile-title strong span{
  font-family: "Product Sans", sans-serif;
  font-weight: 300;
  color: #001d38;
}

@media only screen and (max-width: 860px){
  .app-bar-search img {
    display: none !important;
  }
  .search{
    width: 100px !important;
  }
}
@media only screen and (max-width: 480px){
  .search{
    width: 100px !important;
  }
}
@media only screen and (max-width: 360px){
  .search{
    width: 65px !important;
  }
}

@media only screen and (max-width: 300px){
  .displayNone{
    display: none !important;
  }
  .displayCloseNone{
      position: relative;
      top:6px  !important;
  }
}

